rust/examples/other/collect/src/main.rs
fn main() {
    let characters = ('a', 'b');
    println!("{:?}", characters);

    let strings = ("a", "b");
    println!("{:?}", strings);
    // println!("{:?}", letters.collect());
    println!("Hello");
    // println!('Hello'); // error: character literal may only contain one codepoint

}
